Changs in footer

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,21 +2,11 @@
 
 h1,h2,h3,h4
     font-family: 'Merriweather', serif
-    
+
 .header-custom
     position: sticky
     top: 0
     z-index: 100
-
-.quote-wrapper
-    padding-left: 110px
-    padding-right: 110px
-    display: table
-
-
-    & .quote-item
-        display: table-cell
-        vertical-align: middle
 
 .carousel-section
     background: #303030
@@ -47,3 +37,10 @@ h1,h2,h3,h4
 .section
     padding-top: 10px
     padding-bottom: 10px
+
+.quote-text
+    color: #555
+
+.quote-author
+    color: #333
+    font-weight: bold
