--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div>
+<section style="background-color: #F4F5F7; padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
@@ -12,8 +12,7 @@
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
                 <img src="../../assets/images/logo.png" width="25" height="25" alt="">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </div>
         </div>
     </div>
-</div>
+</section>
