--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,9 +1,6 @@
 <div>
     <div class="container">
         <div class="row" style="height: 100vh;">
-            <div class="col-md-5 my-auto">
-                <img src='images/my-journey.jpg' style="width: 100%; height: auto;">
-            </div>
             <div class="col-md-7 my-auto">
                 <h2>My Journey</h2>
                 <p>
@@ -14,128 +11,93 @@
         </div>
     </div>
 </div>
-<div>
-    <div class="carousel-section">
-        <div class="container">
-            <div class="row" style="height: auto;">
-                <div class="col-md-12 my-auto">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <p class="mb-0">
+                    <i>
+                        "You rarely come across standout talent like Saifil. He expertly
+                        filled
+                        the
+                        role
+                        of User Experience Design Intern at Impactrio for my company’s
+                        "Impactraction,"
+                        formerly "Wheel for Change" team. He, with other collaborators, took
+                        the
+                        idea of
+                        the solution and designed, wire framed, created the MVP of the app.
+                        Not
+                        only
+                        did
+                        Saifil show initiative in building out our UI/UX architecture from
+                        scratch,
+                        but
+                        he also played a huge role in bringing innovative features from a
+                        design
+                        perspective. He understood the framework of social innovation, did
+                        in-depth
+                        research, and provided effective solutions, especially on the
+                        onboarding
+                        process
+                        of a social entrepreneur. All inall, Saifil is a rock star and any
+                        organization
+                        would be lucky to have him!"
+                    </i>
+                </p>
+                <p class="quote-author">Ashraful Hasan</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p class="quote-text mb-0">
+                    <i>
+                        "Saifil is smart, creative and professional. He has helped shape the
+                        BPM-D App
+                        and
+                        has played a crucial role in designing the user interface.
+                        He is dedicated and a pleasure to work with. He has been helpful,
+                        energetic
+                        and
+                        dedicated to all the work assigned to him and helped shaping the
+                        BPM-D
+                        India
+                        team.
+                        I will be happy to recommend saifil to any organisation that
+                        appreciates
+                        creativity and needs design thinkers.
 
-                        <ol class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ol>
-
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="quote-wrapper">
-                                    <div class="quote-item">
-                                        <p>
-                                            <i>
-                                                "You rarely come across standout talent like Saifil. He expertly
-                                                filled
-                                                the
-                                                role
-                                                of User Experience Design Intern at Impactrio for my company’s
-                                                "Impactraction,"
-                                                formerly "Wheel for Change" team. He, with other collaborators, took
-                                                the
-                                                idea of
-                                                the solution and designed, wire framed, created the MVP of the app.
-                                                Not
-                                                only
-                                                did
-                                                Saifil show initiative in building out our UI/UX architecture from
-                                                scratch,
-                                                but
-                                                he also played a huge role in bringing innovative features from a
-                                                design
-                                                perspective. He understood the framework of social innovation, did
-                                                in-depth
-                                                research, and provided effective solutions, especially on the
-                                                onboarding
-                                                process
-                                                of a social entrepreneur. All inall, Saifil is a rock star and any
-                                                organization
-                                                would be lucky to have him!"
-                                            </i>
-                                        </p>
-                                        <h5>Ashraful Hasan</h5>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="carousel-item">
-                                <div class="quote-wrapper">
-                                    <div class="quote-item">
-                                        <p>
-                                            <i>
-                                                "Saifil is smart, creative and professional. He has helped shape the
-                                                BPM-D App
-                                                and
-                                                has played a crucial role in designing the user interface.
-                                                He is dedicated and a pleasure to work with. He has been helpful,
-                                                energetic
-                                                and
-                                                dedicated to all the work assigned to him and helped shaping the
-                                                BPM-D
-                                                India
-                                                team.
-                                                I will be happy to recommend saifil to any organisation that
-                                                appreciates
-                                                creativity and needs design thinkers.
-
-                                                Wish him all the best for his higher studies, I am sure he will do
-                                                well
-                                                in
-                                                his
-                                                career. "
-                                            </i>
-                                        </p>
-                                        <h5>Rakesh Gusain</h5>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="carousel-item">
-                                <div class="quote-wrapper">
-                                    <div class="quote-item">
-                                        <p>
-                                            <i>
-                                                "Saifil is a great team player to work with. Brings Exciting and
-                                                Innovative
-                                                Ideas
-                                                constantly in the team to drive any project he's a part of. Has
-                                                quality
-                                                skills
-                                                in UI/UX with a good amount of experience in designing Web pages for
-                                                our
-                                                product. He's Smart and thinks at right pace in the right place. It
-                                                was
-                                                a
-                                                pleasure to work with him in all the projects we were in together"
-                                            </i>
-                                        </p>
-                                        <h5>Rehban Khatri</h5>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                            <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-                </div>
+                        Wish him all the best for his higher studies, I am sure he will do
+                        well
+                        in
+                        his
+                        career. "
+                    </i>
+                </p>
+                <p class="quote-author">Rakesh Gusain</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p class="quote-text mb-0">
+                    <i>
+                        "Saifil is a great team player to work with. Brings Exciting and
+                        Innovative
+                        Ideas
+                        constantly in the team to drive any project he's a part of. Has
+                        quality
+                        skills
+                        in UI/UX with a good amount of experience in designing Web pages for
+                        our
+                        product. He's Smart and thinks at right pace in the right place. It
+                        was
+                        a
+                        pleasure to work with him in all the projects we were in together"
+                    </i>
+                </p>
+                <p class="quote-author">Rehban Khatri</p>
             </div>
         </div>
     </div>
+</section>
+  
