--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,14 +13,8 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a routerLink="" routerLinkActive="active" class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/about-me" routerLinkActive="active" class="nav-link" href="about-me.html">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+            <li *ngFor="let ml of MenuVMs" class="{{ml.navclass}}" (click)="OnLinkClick(ml)">
+              <a routerLink="{{ml.RouterLink}}" routerLinkActive="active" class="nav-link">{{ml.Linkname}}</a>
             </li>
           </ul>
         </div>
