--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,16 +3,16 @@
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
                 <h3>Get In Touch</h3>
-                <p>I'm up for a interesting project any day, So dial me up</p>
-                <button type="button" class="btn btn-outline-primary">Say Hello!</button>
+                <p>If you have a interesting project I can contribute to then</p>
+                <button type="button" class="btn btn-outline-primary">Lets Meet</button>
             </div>
         </div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
                 <img src="../../assets/images/logo.png" width="25" height="25" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
 </section>
