--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,15 @@
-<section style="background:black;color:#fafafa">
+<section style="background-image: linear-gradient(#fff, #f3f4f7);">
     <div class="container">
-        <div class="row" style="">
+        <div class="row" style="height: 75vh;">
             <div class="col-md-2"></div>
-            <div class="col-md-4 my-auto">
-                <h1 style="font-weight: 300;color: #ccc;">Hi! I am Saifil, <br>A UI/UX designer based in Toronto </h1>
-                <!-- <button type="button" class="btn btn-primary">Learn about me</button> -->
+            <div class="col-md-8 my-auto">
+                <h1 style="color: #777;">
+                    <b style="color: #333;">Hello! I am Saifil,</b><br>A Product designer based in Toronto who enjoys the creative process to solve problems.
+                </h1>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-3">
                 <img src="../../assets/images/saifilcover.jpg" class="img-fluid">
-            </div>
+            </div> -->
             <div class="col-md-2"></div>
         </div>
     </div>
