removed spacing in project list

--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="container">
-        <div class="row" style="height: 100vh;">
+        <div class="row my-2">
             <div class="col-md-6 my-auto">
                 <img src="../../assets/images/woc-2.png" class="img-fluid">
             </div>
