changes in WFC page, font styling, favicon

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="container">
-        <div class="row" style="height: 100vh;">
+        <div class="row" style="height: 70vh;">
             <div class="col-md-7 my-auto">
                 <h2>My Journey</h2>
                 <p>
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p class="mb-0">
+                <p class="quote-text mb-0">
                     <i>
                         "You rarely come across standout talent like Saifil. He expertly
                         filled
