--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,12 +1,13 @@
 <div>
     <div class="container">
         <div class="row my-2">
-            <div class="col-md-6 my-auto">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 my-auto">
                 <img src="../../assets/images/woc-2.png" class="img-fluid">
             </div>
-            <div class="col-md-6 my-auto">
-                <h3 style="font-weight:bold">Application process for an investment platform dedicated for Social Entrepreneurs called Wheel
-                    For Change</h3>
+            <div class="col-md-5 my-auto">
+                <h4>Application process for an investment platform dedicated for Social Entrepreneurs called Wheel
+                    For Change</h4>
                 <p>
                     Wheel for change is an investment platform for Social Entrepreneurs where Potential investors
                     could find and invest in projects The case study zooms in one of the parts of this project
@@ -17,7 +18,7 @@
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i></p>
                 </a>
             </div>
-           
+            <div class="col-md-1"></div>
         </div>
     </div>
 </div>
