--- a/src/app/wheel-for-change/wheel-for-change.component.html
+++ b/src/app/wheel-for-change/wheel-for-change.component.html
@@ -1,186 +1,230 @@
-<section class="section">
-    <div class="container">
-        <div class="row" style="margin-bottom: 20px;">
-            <div class="col-md-6 my-auto">
-                <h3 style="font-weight: bold;">
-                    Project Background
-                </h3>
-                <p>
-                    Wheel for change was an investment platform for Social Entrepreneurs where Potential investors could
-                    find and invest in projects. The Client required a digital platform in which Social entrepreneurs
-                    could create their profiles for their projects and could be found by investors.
-                </p>
-            </div>
-            <div class="col-md-6">
-                <img src="../../assets/images/woc-2.png" class="img-fluid">
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section" style="background:#212121;color:white">
-    <div class="container">
-        <div class="row pt-3 pb-3">
-            <div class="col-md-4 text-center">
-                <h5>Client</h5>
-                <p>Ashraful Hasan</p>
-            </div>
-            <div class="col-md-4 text-center">
-                <h5>My Role</h5>
-                <p>Product Designer</p>
-            </div>
-            <div class="col-md-4 text-center">
-                <h5>Duration</h5>
-                <p>120 hours</p>
+<div style="background: #F3F4F7;">
+    <section class="section">
+        <div class="container">
+            <div class="row" style="margin-bottom: 20px;">
+                <div class="col-md-6 my-auto">
+                    <h3 style="font-weight: bold;">
+                        Project Background
+                    </h3>
+                    <p>
+                        Wheel for change was an investment platform for Social Entrepreneurs where Potential investors
+                        could
+                        find and invest in projects. The Client required a digital platform in which Social
+                        entrepreneurs
+                        could create their profiles for their projects and could be found by investors.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="../../assets/images/woc-2.png" class="img-fluid">
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
+    <section style="background:#212121;color:white">
+        <div class="container">
+            <div class="row pt-3 pb-3">
+                <div class="col-md-4 text-center">
+                    <h5>Client</h5>
+                    <p>Ashraful Hasan</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <h5>My Role</h5>
+                    <p>Product Designer</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <h5>Duration</h5>
+                    <p>3 months</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <h4>Challenges</h4>
-                <ul>
-                    <li>
+    <section class="my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Identifying Project Scope</h3>
+                    <p>After some initial brainstorming we found that the platform needs to be divided into 3 parts post
+                        the
+                        research and different people can be accountable for each part. Based on this we divided to
+                        project into
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>Marketing Website</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Social Entrepreneurs</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Investors</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h3>Challenges</h3>
+                    <p>
                         User had to input in a lot of information through a form and forms can be long and boring. This
                         could affect the
                         experience of the user and drive him away from the platform. The challenge here is to design a
                         form
                         which could
                         takes hours to fill(not at the same time).
-                    </li>
-                    <li>
+                    </p>
+                    <p>
                         Wheel for change is originally an social impact measuring framework designed by Ashraful Hasan
                         which needed to be integrated with the platform. The framework had a set of questions which user
                         needed to answer and based on that it would determine its social impact.
-                    </li>
-                </ul>
-
+                    </p>
+                </div>
+                <div class="col-md-2"></div>
             </div>
-            <div class="col-md-2"></div>
         </div>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <h4>Research Goals</h4>
-                <ul>
-                    <li>Understanding Social Entrepreneurs and thier problems and based on that determine set of
+    </section>
+
+    <!-- //https://www.wendyschorr.com/project-page-build-a-meal -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h3 style="color: #5E6C84;">Research</h3>
+                    <h4>Persona</h4>
+                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and thier problems and based on that determine set of
                         features to solve thier
-                        problems</li>
-
-                </ul>
+                        problems</p>
+                    <img src="../../assets/images/Persona1.PNG" style="height: auto; width: 100%;">
+                </div>
+                <div class="col-md-2"></div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <img src="../../assets/images/persona2.PNG" style="height: auto; width: 100%;">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <p><b>Key Outcomes</b></p>
+                    <ul>
+                        <li>I want to manage my team and distribute tasks</li>
+                        <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
+                    </ul>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
         </div>
+    </section>
 
-    </div>
-</section>
 
-<!-- //https://www.wendyschorr.com/project-page-build-a-meal -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <h4>Persona</h4>
-            <img src="../../assets/images/Persona1.PNG" style="height: auto; width: 100%;">
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h4>Competitive Analysis</h4>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h4>Online Research</h4>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
         </div>
-        <div class="col-md-2"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <img src="../../assets/images/persona2.PNG" style="height: auto; width: 100%;">
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h3 style="color: #5E6C84;">Define</h3>
+                    <h4>Tasks</h4>
+                    <img src="../../assets/images/tasks.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
         </div>
-        <div class="col-md-2"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <h4>Key Outcomes</h4>
-            <ul>
-                <li>I want to manage my team and distribute tasks</li>
-                <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
-            </ul>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3>User Flows</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
         </div>
-        <div class="col-md-2"></div>
-    </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3>Wireframes</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3>Prototype</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3>Conclusion</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </section>
+
+
+
+   
 </div>
-
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Competitive Analysis</h2>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Tasks</h3>
-            </div>
-            <div class="col-md-6">
-                <img src="../../assets/images/tasks.jpg" class="img-fluid">
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>User Flows</h3>
-            </div>
-            <div class="col-md-6">
-                
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Wireframes</h3>
-            </div>
-            <div class="col-md-6">
-                
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Prototype</h3>
-            </div>
-            <div class="col-md-6">
-                
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Conclusion</h3>
-            </div>
-            <div class="col-md-6">
-                
-            </div>
-        </div>
-    </div>
-</section>
