--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-h1,h2,h3,h4
-    font-family: 'Merriweather', serif
+h1,h2,h3
+    font-family: 'Raleway', sans-serif
+    font-weight: bold
+
+h4,h5,h6
+    font-family: 'Raleway', sans-serif
+    font-weight: 600
 
 .header-custom
     position: sticky
@@ -44,3 +49,17 @@ h1,h2,h3,h4
 .quote-author
     color: #333
     font-weight: bold
+
+.button-red
+    border: 1px solid #e84118
+    background: #FFEBEE
+    color: #e84118
+    padding: 5px 15px 5px 15px
+    border-radius: 5px
+
+.button-red:hover
+    background: #e84118
+    color: #FFEBEE
+
+.narrow-container
+    background: #ffffff
