--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,18 @@
 <section style="background-image: linear-gradient(#fff, #f3f4f7);">
     <div class="container">
-        <div class="row" style="height: 75vh;">
+        <div class="row" style="height: 85vh;">
             <div class="col-md-2"></div>
             <div class="col-md-8 my-auto">
-                <h1 style="color: #777;">
-                    <b style="color: #333;">Hello! I am Saifil,</b><br>A Product designer based in Toronto who enjoys the creative process to solve problems.
+                <h1>
+                    Hello! I am Saifil
                 </h1>
+                <h2 style="font-weight: 400;">
+                    A Product designer based in Toronto
+                </h2>
+                <p>
+                    who enjoys the creative process to solve problems.
+                </p>
+                <!-- <button class="button-red">See my work</button> -->
             </div>
             <!-- <div class="col-md-3">
                 <img src="../../assets/images/saifilcover.jpg" class="img-fluid">
