changes in UI and added userflow images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,23 @@
-<section style="background-image: linear-gradient(#fff, #f3f4f7);">
+<section>
     <div class="container">
         <div class="row" style="height: 85vh;">
             <div class="col-md-2"></div>
             <div class="col-md-8 my-auto">
-                <h1>
+                <h1 style="color:#487eb0">
                     Hello! I am Saifil
                 </h1>
                 <h2 style="font-weight: 400;">
                     A Product designer based in Toronto
                 </h2>
-                <p>
-                    who enjoys the creative process to solve problems.
+                <p style="font-size: 20px;color: #505F79;">
+                    I always have strived hard to solve problems and I enjoy the process and is satisfying for me.
                 </p>
-                <!-- <button class="button-red">See my work</button> -->
+                <p style="color: #253858;">
+                    <span><i class="fas fa-laptop-code home-icon-wrapper"></i> <b>I Code</b></span>
+                    <span class="mx-5"><i class="fas fa-bezier-curve home-icon-wrapper"></i> <b>I Design</b></span>
+                    <span><i class="fas fa-chess-board home-icon-wrapper"></i><b>I Play Chess</b> </span>
+                </p>
+               
             </div>
             <!-- <div class="col-md-3">
                 <img src="../../assets/images/saifilcover.jpg" class="img-fluid">
