--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,21 +1,22 @@
 <div>
     <div class="container">
-        <div class="row my-2">
+        <div class="row my-5">
             <div class="col-md-1"></div>
             <div class="col-md-5 my-auto">
                 <img src="../../assets/images/woc-2.png" class="img-fluid">
             </div>
             <div class="col-md-5 my-auto">
-                <h4>Application process for an investment platform dedicated for Social Entrepreneurs called Wheel
+                <h4>Designing the application process for an investment platform called Wheel
                     For Change</h4>
+                <p style="color: #505F79; font-style: italic; margin-bottom: 5px;font-weight: bold;">
+                    Group Course Project - 3 months</p>
                 <p>
                     Wheel for change is an investment platform for Social Entrepreneurs where Potential investors
                     could find and invest in projects The case study zooms in one of the parts of this project
                     discussing about the design process for the application process for Social Entrepreneurs.
                 </p>
                 <a routerLink="/wheel-for-change" routerLinkActive="active">
-                    <p>Read case study
-                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i></p>
+                    <button class="btn btn-dark">Learn more</button>
                 </a>
             </div>
             <div class="col-md-1"></div>
