--- a/src/app/wheel-for-change/wheel-for-change.component.html
+++ b/src/app/wheel-for-change/wheel-for-change.component.html
@@ -1,11 +1,25 @@
 <div style="background: #F3F4F7;">
     <section class="section">
+        <div class="container my-5">
+            <div class="row" style="margin-bottom: 20px;">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <img src="../../assets/images/woc-2.png" class="img-fluid">
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+        </div>
+        
+    </section>
+
+    <section class="section">
         <div class="container">
             <div class="row" style="margin-bottom: 20px;">
-                <div class="col-md-6 my-auto">
-                    <h3 style="font-weight: bold;">
-                        Project Background
-                    </h3>
+                <div class="col-md-2"></div>
+                <div class="col-md-8 my-auto">
+                    <h1>
+                        Wheel For Change
+                    </h1>
                     <p>
                         Wheel for change was an investment platform for Social Entrepreneurs where Potential investors
                         could
@@ -14,28 +28,28 @@
                         could create their profiles for their projects and could be found by investors.
                     </p>
                 </div>
-                <div class="col-md-6">
-                    <img src="../../assets/images/woc-2.png" class="img-fluid">
-                </div>
+                <div class="col-md-2"></div>
             </div>
         </div>
     </section>
 
-    <section style="background:#212121;color:white">
+    <section>
         <div class="container">
             <div class="row pt-3 pb-3">
-                <div class="col-md-4 text-center">
+                <div class="col-md-3"></div>
+                <div class="col-md-2">
                     <h5>Client</h5>
                     <p>Ashraful Hasan</p>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-2">
                     <h5>My Role</h5>
                     <p>Product Designer</p>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-2">
                     <h5>Duration</h5>
                     <p>3 months</p>
                 </div>
+                <div class="col-md-3"></div>
             </div>
         </div>
     </section>
@@ -44,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Identifying Project Scope</h3>
+                    <h3>Identifying Project Scope and Roles</h3>
                     <p>After some initial brainstorming we found that the platform needs to be divided into 3 parts post
                         the
                         research and different people can be accountable for each part. Based on this we divided to
@@ -95,11 +109,6 @@
                         which could
                         takes hours to fill(not at the same time).
                     </p>
-                    <p>
-                        Wheel for change is originally an social impact measuring framework designed by Ashraful Hasan
-                        which needed to be integrated with the platform. The framework had a set of questions which user
-                        needed to answer and based on that it would determine its social impact.
-                    </p>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -114,7 +123,8 @@
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3 style="color: #5E6C84;">Research</h3>
                     <h4>Persona</h4>
-                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and thier problems and based on that determine set of
+                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and thier problems and based on
+                        that determine set of
                         features to solve thier
                         problems</p>
                     <img src="../../assets/images/Persona1.PNG" style="height: auto; width: 100%;">
@@ -135,6 +145,12 @@
                     <ul>
                         <li>I want to manage my team and distribute tasks</li>
                         <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
+                        <li>I want to trust those who are investing in my business</li>
+                        <li>I want to connect with investors with the same
+                            social values as myself</li>
+                        <li>I want to spend less time doing paperwork</li>
+                        <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
+                        <li>I get frustrated when I have to do repetitive work for different project applications</li>
                     </ul>
                 </div>
                 <div class="col-md-2"></div>
@@ -180,8 +196,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>User Flows</h3>
+                    <img src="../../assets/images/userflow1.PNG" style="height: auto; width: 100%;">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <img src="../../assets/images/userflow2.PNG" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -223,8 +247,4 @@
             </div>
         </div>
     </section>
-
-
-
-   
 </div>
