--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,8 +3,13 @@
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
                 <h3>Get In Touch</h3>
-                <p>If you have a interesting project I can contribute to then</p>
-                <button type="button" class="btn btn-outline-primary">Lets Meet</button>
+                <p style="font-size: 17px;color:#505F79;">
+                    If you have a interesting project I can contribute to then you can hit me up at
+                    <a href="mailto: saifilmomin4@gmail.com">saifilmomin4@gmail.com</a>
+                </p>
+                <img src="../../assets/images/logo.png" width="25" height="25" alt="">
+
+
             </div>
         </div>
     </div>
@@ -15,4 +20,13 @@
             </div>
         </div>
     </div> -->
+</section>
+<section style="background: black;color: white;font-size: 12px; text-align: right;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 p-2">
+                Designed and Developed by Saifil Momin
+            </div>
+        </div>
+    </div>
 </section>
