--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,10 +3,12 @@
 h1,h2,h3
     font-family: 'Raleway', sans-serif
     font-weight: bold
+    color: #172B4D
 
 h4,h5,h6
     font-family: 'Raleway', sans-serif
     font-weight: 600
+    color: #172B4D
 
 .header-custom
     position: sticky
@@ -63,3 +65,7 @@ h4,h5,h6
 
 .narrow-container
     background: #ffffff
+
+.home-icon-wrapper
+    font-size: 25px
+    padding: 5px
