Added angular animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,9 +21,7 @@
       </div>
     </nav>
   </header>
-  <main>
-    <router-outlet ></router-outlet>
+  <main [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
   </main>
-  <footer>
-    <app-footer></app-footer>
-  </footer>
+  
