fixes in animations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                     A Product designer based in Toronto
                 </h2>
                 <p style="font-size: 20px;color: #505F79;">
-                    I always have strived hard to solve problems and I enjoy the process and is satisfying for me.
+                    I always have strived hard to solve problems and I enjoy the process
                 </p>
                 <p style="color: #253858;">
                     <span><i class="fas fa-laptop-code home-icon-wrapper"></i> <b>I Code</b></span>
