--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,6 +1,15 @@
 <div>
     <div class="container">
-        <div class="row my-5">
+         <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <h1>My Work</h1>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+    <div class="container py-5">
+        <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5 my-auto">
                 <img src="../../assets/images/woc-2.png" class="img-fluid">
