changes in image and about me page

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,20 +1,23 @@
-<div>
-    <div class="container">
-        <div class="row" style="height: 70vh;">
-            <div class="col-md-7 my-auto">
-                <h2>My Journey</h2>
+<section>
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 my-auto">
+                <h1>My Journey</h1>
                 <p>
                     I started my career as a Web developer in a small startup of 3 people. There I got the
                     opportunity to work on a SaaS based product and met very amazing people.
                 </p>
             </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
-</div>
+</section>
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <p class="quote-text mb-0">
                     <i>
                         "You rarely come across standout talent like Saifil. He expertly
@@ -45,11 +48,13 @@
                         would be lucky to have him!"
                     </i>
                 </p>
-                <p class="quote-author">Ashraful Hasan</p>
+                <p class="quote-author">Ashraful Hasan - Founder and Lead Consultant at Impactrio</p>
             </div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <p class="quote-text mb-0">
                     <i>
                         "Saifil is smart, creative and professional. He has helped shape the
@@ -74,11 +79,13 @@
                         career. "
                     </i>
                 </p>
-                <p class="quote-author">Rakesh Gusain</p>
+                <p class="quote-author">Rakesh Gusain - Director at BPM-D</p>
             </div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <p class="quote-text mb-0">
                     <i>
                         "Saifil is a great team player to work with. Brings Exciting and
@@ -95,8 +102,9 @@
                         pleasure to work with him in all the projects we were in together"
                     </i>
                 </p>
-                <p class="quote-author">Rehban Khatri</p>
+                <p class="quote-author">Rehban Khatri - Technical Consultant at BPM-D</p>
             </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
 </section>
