--- a/src/styles.sass
+++ b/src/styles.sass
@@ -22,7 +22,7 @@ h4,h5,h6
     padding-bottom: 30px
 
 .footer-section
-    background: #f3f4f7
+    background: #fff
 
 /* Overriding bootstarp */
 
