--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section style="background-color: #F4F5F7; padding-top: 20px; padding-bottom: 20px;">
+<section style="padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
