--- a/src/app/plato/plato.component.html
+++ b/src/app/plato/plato.component.html
@@ -2,11 +2,11 @@
     <section class="section">
         <div class="container my-5">
             <div class="row" style="margin-bottom: 20px;">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <img src="../../assets/images/woc-2.png" class="img-fluid">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <img src="../../assets/images/plato-cover-inside.png" class="img-fluid">
                 </div>
-                <div class="col-md-3"></div>
+                <div class="col-md-2"></div>
             </div>
         </div>
 
@@ -18,7 +18,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 my-auto">
                     <h1>
-                        Wheel For Change
+                        Plato
                     </h1>
                     <p>
                         Wheel for change was an investment platform for Social Entrepreneurs where Potential investors
@@ -54,46 +54,7 @@
         </div>
     </section>
 
-    <section class="my-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>Identifying Project Scope and Roles</h3>
-                    <p>After some initial brainstorming we found that the platform needs to be divided into 3 parts post
-                        the
-                        research and different people can be accountable for each part. Based on this we divided to
-                        project into
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Marketing Website</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Social Entrepreneurs</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Investors</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <section>
         <div class="container">
@@ -159,6 +120,25 @@
     </section>
 
 
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h4>Competitive Analysis</h4>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h4>Online Research</h4>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </section>
+
 
     <section class="section">
         <div class="container">
@@ -197,25 +177,24 @@
         </div>
     </section>
 
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3>Wireframes</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </section>
 
     <section class="section">
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
+                <div class="col-md-8">
                     <h3>Prototype</h3>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/Project Splash page.png" class="img-fluid">
-                    <img src="../../assets/images/Create a project details.png" class="img-fluid">
-                    <img src="../../assets/images/Assign a team.png" class="img-fluid">
-                    <img src="../../assets/images/Projects list.png" class="img-fluid">
-                    <img src="../../assets/images/landing.png" class="img-fluid">
-                    <img src="../../assets/images/Application Q1.png" class="img-fluid">
                 </div>
                 <div class="col-md-2"></div>
             </div>
